Fix dark mode

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,4 +1,10 @@
-@import './variables/dark.css';
+/*
+  Order matters here.
+  "light" is our default. "dark" uses the
+  same variable names, but different values,
+  so it must come after "light".
+*/
 @import './variables/light.css';
+@import './variables/dark.css';
 @import './variables/miscellaneous.css';
 @import './variables/system.css';
